# ml_misfits

./: README.md
courses/nn_zero_to_hero/hw1/: micrograd_exercises.ipynb
courses/nn_zero_to_hero/hw2/: makemore_part1_bigrams.ipynb  pyproject.toml
courses/nn_zero_to_hero/hw3/: MLP_jax.ipynb  build_makemore_mlp.ipynb  pyproject.toml
courses/yandex_ml_handbook/bagging/: assignment_bagging_and_oob.ipynb  pyproject.toml
courses/yandex_ml_handbook/decition_trees/: homework-practice-05-trees.ipynb  hw5code.py  main.py  pyproject.toml
courses/yandex_ml_handbook/hw1/: ML_1_3.ipynb  pyproject.toml
courses/yandex_ml_handbook/hw2/: ML_2_1.ipynb  pyproject.toml
